# Gomoku

./: CMakeLists.txt
src/: AlphaBetaAI.cpp  AlphaBetaAI.h  GameBoard.cpp  GameBoard.h  GomokuAI.cpp  GomokuAI.h  gomoku.cpp  gomoku.h  horist.cpp  horist.h  main.cpp  search.h
test/: test.cpp  test_evaluate.cpp  test_search.cpp
